tests/dividebyzero.out
Interpreter error: You're not allowed to divide by 0; expected int, got int (0) instead at line 4, column 6
