tests/dividebyzero.fo
fun int main() =
    let zero = 0 in
    let d = 2 in
	let a = d/zero in
	write(a)